[gd_scene load_steps=66 format=2]

[ext_resource path="res://Part Arroyo/FONDO EGIPTE.png" type="Texture" id=1]
[ext_resource path="res://Part Marc/Ghoul Sprite Sheet.png" type="Texture" id=2]
[ext_resource path="res://Part Marc/Korred Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://FONDOS/Pharaon.gd" type="Script" id=4]
[ext_resource path="res://Prova_pegar.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 160, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 7.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "dead",
"speed": 7.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "move",
"speed": 7.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 44.5, 45.25 )

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 17, 44 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 18.375, 45 )

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 45.5, 46 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=60]
animations = [ {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "move",
"speed": 12.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=61]
extents = Vector2( 31.875, 33.25 )

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 22.5625, 22 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 520.25, 24 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 576, 26.5 )

[node name="Node2D" type="Node2D"]

[node name="FONDO EGIPTE" type="Sprite" parent="."]
position = Vector2( 510.75, 300 )
scale = Vector2( 1.59764, 2.17647 )
texture = ExtResource( 1 )

[node name="Pharaon" type="KinematicBody2D" parent="."]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pharaon"]
position = Vector2( 167.25, 476.5 )
scale = Vector2( 4.67188, 4.53125 )
frames = SubResource( 29 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pharaon"]
position = Vector2( 168, 501 )
shape = SubResource( 30 )

[node name="AttackArea" type="Area2D" parent="Pharaon"]

[node name="AttackCollision1" type="CollisionShape2D" parent="Pharaon/AttackArea"]
position = Vector2( 99, 501 )
shape = SubResource( 33 )
disabled = true

[node name="AttackCollision2" type="CollisionShape2D" parent="Pharaon/AttackArea"]
position = Vector2( 238.625, 499 )
shape = SubResource( 34 )
disabled = true

[node name="AreaCollision" type="Area2D" parent="Pharaon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pharaon/AreaCollision"]
position = Vector2( 168, 501 )
shape = SubResource( 63 )

[node name="MainCharacter" type="KinematicBody2D" parent="."]
position = Vector2( 495, 220 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainCharacter"]
position = Vector2( -10.4375, 10.3125 )
scale = Vector2( 4.27734, 3.70703 )
frames = SubResource( 60 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCharacter"]
position = Vector2( -12, 35 )
shape = SubResource( 61 )

[node name="AttackArea" type="Area2D" parent="MainCharacter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCharacter/AttackArea"]
position = Vector2( 41.125, 39 )
shape = SubResource( 62 )
disabled = true

[node name="AttackArea2" type="Area2D" parent="MainCharacter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCharacter/AttackArea2"]
position = Vector2( -74.4375, 42 )
shape = SubResource( 62 )
disabled = true

[node name="Terra" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terra"]
position = Vector2( 507.75, 574 )
shape = SubResource( 31 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Terra"]
position = Vector2( 535, 359.5 )
shape = SubResource( 32 )
disabled = true

[connection signal="body_entered" from="Pharaon/AttackArea" to="MainCharacter" method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="Pharaon/AreaCollision" to="MainCharacter" method="_on_AreaCollision_body_entered"]
[connection signal="animation_finished" from="MainCharacter/AnimatedSprite" to="MainCharacter" method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="MainCharacter/AttackArea" to="Pharaon" method="_on_AttackArea_body_entered"]
